<resources>
    <string name="app_name">Home Accounting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">New</string>

    <string name="pref_title_server_name">Server name</string>
    <string name="pref_title_user_id">User ID</string>
    <string name="pref_title_db_name">Database name</string>

    <string name="menu_operations">Operations</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_pin">Pin</string>
    <string name="setPin">Please set new pin code</string>
    <string name="enterPin">Please enter pin code</string>
    <string name="enterPinAgain">Please enter pin code again</string>
    <string name="ok">OK</string>
    <string name="wrongPin">Wrong pin code</string>
    <string name="shortPin">Too short pin code</string>

    <string name="select_date">Date</string>
    <string name="action_modify">Modify</string>
    <string name="action_delete">Delete</string>
    <string name="loading">Loading...</string>

    <string name="confirmation">Confirmation</string>
    <string name="add_operation">Add operation</string>
    <string name="modify_operation">Modify operation</string>
    <string name="empty_summa">Summa field cannot be empty</string>
    <string name="empty_subcategory">Subcategory field cannot be empty</string>
    <string name="error">Error</string>
    <string name="status">Status</string>
    <string name="title_activity_editoperation">Operation</string>
    <string name="account">Account</string>
    <string name="amount">Amount</string>
    <string name="summa">Summa</string>
    <string name="parameters">Parameters</string>
    <string name="second_account">Second account</string>
    <string name="distance">Distance</string>
    <string name="network">Network</string>
    <string name="type">Type</string>
    <string name="subcategory">Subcategory</string>
    <string name="operation_delete_confirmation">Are you sure that you want to delete selected operation?</string>
</resources>