<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="localhost"
        android:key="server_name"
        android:summary="Host name to connect"
        android:singleLine="true"
        android:title="@string/pref_title_server_name" />

    <EditTextPreference
        android:defaultValue=""
        android:key="user_id"
        android:summary="User ID"
        android:singleLine="true"
        android:title="@string/pref_title_user_id" />

    <EditTextPreference
        android:defaultValue=""
        android:key="db_name"
        android:summary="Database name"
        android:singleLine="true"
        android:title="@string/pref_title_db_name" />

</androidx.preference.PreferenceScreen>
