<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.operations.NewOperationActivity">

    <TextView
        android:id="@+id/subcategory_label"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/subcategory"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="5dp"
        />

    <AutoCompleteTextView
        android:id="@+id/subcategory_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:text=""
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_columnSpan="2"
        />

    <TextView
        android:id="@+id/account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/account"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="5dp"
        />

    <Spinner
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnSpan="2"
        />

    <TextView
        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/amount"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:ems="10"
        android:gravity="start"
        />

    <TextView
        android:id="@+id/summa_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/summa"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/summa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:ems="10"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:layout_columnSpan="2"
        />

    <TextView
        android:id="@+id/parameter_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:text="@string/parameters"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:layout_columnSpan="3"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/seca_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:text="@string/second_account"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:visibility="gone"
        />

    <Spinner
        android:id="@+id/second_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/dist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/distance"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:ems="10"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:inputType="number"
        android:layout_columnSpan="2"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/network_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/network"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:visibility="gone"
        />

    <AutoCompleteTextView
        android:id="@+id/network"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:ems="10"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:layout_columnSpan="2"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:text="@string/type"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:visibility="gone"
        />

    <AutoCompleteTextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="9"
        android:ems="10"
        android:layout_gravity="fill_horizontal"
        android:gravity="start"
        android:layout_columnSpan="2"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/add_operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_operation"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        />

    <com.sz.homeaccounting2.ui.pin.NumericKeyboard
        android:id="@+id/keyboard"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:visibility="gone"
        />
</GridLayout>